# sedotra

./: .flake8  .gitignore  LICENSE  README.md  create_migration.sh  docker-compose.yml  env-sample  run_tests.sh
backend/app/: initial-data.py  pyproject.toml  start-dev.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 12097b531aac_added_role_models_and_organization_model.py  d11266229bcf_added_role_models_and_organization_model.py  e461feb811d5_added_constraints_to_documents_table_.py  edc3dc2fa9e2_added_new_db_table_for_documents.py  f42bc8b30dbe_initial_schema.py
backend/app/app/: backend_pre_start.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/authorization/: oso.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_dataroom.py  crud_document.py  crud_organization.py  crud_roles.py  crud_team.py  crud_user.py
backend/app/app/db/: base.py  base_class.py
backend/app/app/models/: __init__.py  dataroom.py  dataroom_role.py  document.py  organization.py  organization_role.py  team.py  team_role.py  team_user.py  user.py
backend/app/app/object_storage/: __init__.py  client.py
backend/app/app/schemas/: __init__.py  dataroom.py  document.py  organization.py  team.py  token.py  user.py
backend/app/tests/: conftest.py  test_app.py
backend/app/tests/fixtures/: role_data.py
backend/app/tests/functional/: test_auth.py  test_base.py  test_datarooms.py  test_document.py  test_object_storage.py  test_team.py  test_user.py
backend/app/tests/unit/: test_utils.py
scripts/db/: pg_init.sql
(+12 files in other folders)
