[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sascha <jullmann.sascha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
psycopg2-binary = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.7"}
emails = "^0.6"
python-multipart = "^0.0.5"
isort = "^5.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
